fix icon stretch

--- a/src/styles/controls.css
+++ b/src/styles/controls.css
@@ -1,5 +1,6 @@
 .controls-container {
   display: inline-block;
+  vertical-align: middle;
 }
 .control {
   width: 40px;
@@ -11,5 +12,5 @@
 }
 .control img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
