--- a/src/styles/tools.css
+++ b/src/styles/tools.css
@@ -1,6 +1,8 @@
 .tools-container {
   display: inline-block;
+  vertical-align: middle;
 }
+
 .tools-container .selected {
   filter: invert(100%);
 }
@@ -17,5 +19,5 @@
 
 .tool img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
